04_app_development/examples/python/deployment/kube-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: intro-app-deploy
  labels:
    app_deploy: intro-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: intro-app
  template:
    metadata:
      labels:
        app: intro-app
    spec:
      containers:
      - name: app
        image: wojciech11/api-status:1.0.0
        ports:
        - containerPort: 8080
