04_app_development/examples/python/deployment/kube-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: intro-app-svc
  labels:
    me: wojtek
spec:
  ports:
  - port: 8080
    protocol: TCP
    name: http
  selector:
    app: intro-app
